# dealscanner

./: .env.example  .gitignore  README.md
api/: auth.py  main.py
deploy/: Caddyfile  README.md  cron_crawl.sh  dealscanner-api.service  dealscanner-scan.service  dealscanner-scan.timer  dealscanner-web.service  harden.sh  run_bg.sh  scan.sh
docs/: screening-plan.md
engine/: pyproject.toml
engine/dealscanner_engine/: __init__.py  categorize.py  cli.py  config.py  db.py  enrich.py  evaluator.py  importer.py  mailer.py  notify.py  pipeline.py  rejudge.py  scrape.py  thesis.py  util.py
engine/tests/: test_categorize.py  test_enrich.py  test_phase2.py  test_scrape.py
scripts/: verify_rerank.py
thesis/: global_exclusions.yaml  healthcare.yaml  water.yaml
web/: package-lock.json  package.json
web/app/: AuthNav.tsx  DealCard.tsx  Nav.tsx  globals.css  layout.tsx  page.tsx
web/app/activity/: page.tsx
web/app/brokers/: page.tsx
web/app/help/: page.tsx
web/app/instinct/: page.tsx
web/app/login/: page.tsx
web/app/logs/: page.tsx
web/app/search/: page.tsx
web/app/settings/: page.tsx
web/app/spend/: page.tsx
web/app/votes/: page.tsx
web/lib/: api.ts  deal.ts  theses.ts
