[project]
name = "dealscanner-engine"
version = "2.0.0.dev0"
description = "DealScanner v2 thesis-agnostic deal-sourcing engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Needed only for live scraping/scoring (not for migration + settings re-rank).
scrape = [
    "anthropic>=0.40",
    "firecrawl-py>=1.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
]
# Serving the FastAPI layer (api/main.py).
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.scripts]
dsv2 = "dealscanner_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dealscanner_engine"]
